--- a/ProyectoPooDist/nbproject/project.properties
+++ b/ProyectoPooDist/nbproject/project.properties
@@ -66,6 +66,7 @@ file.reference.fontbox-2.0.26.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-202
 file.reference.graphics2d-0.40.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\auxiliary\\graphics2d-0.40.jar
 file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.xml.bind-api-3.0.1.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.xml.bind-api-3.0.1.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\joseg\\OneDrive - Universidad del Istmo\\ENRUTAMIENTO PASS\\jcalendar-1.4.jar
 file.reference.log4j-api-2.18.0.jar=C:\\Users\\joseg\\Downloads\\jar_files\\log4j-api-2.18.0.jar
 file.reference.log4j-core-2.18.0.jar=C:\\Users\\joseg\\Downloads\\jar_files\\log4j-core-2.18.0.jar
 file.reference.pdfbox-2.0.26.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\auxiliary\\pdfbox-2.0.26.jar
@@ -137,7 +138,8 @@ javac.classpath=\
     ${file.reference.xml-apis-1.4.01.jar}:\
     ${file.reference.xml-apis-ext-1.3.04.jar}:\
     ${file.reference.xmlgraphics-commons-2.6.jar}:\
-    ${file.reference.xmlsec-3.0.0.jar}
+    ${file.reference.xmlsec-3.0.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -173,7 +175,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProyectoPooDist
-main.class=PaquetePrincipal.FrameInventario
+main.class=PaquetePrincipal.FRAMEGESTIONDEPILOTOS
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
