--- a/ProyectoPooDist/nbproject/project.properties
+++ b/ProyectoPooDist/nbproject/project.properties
@@ -68,7 +68,11 @@ file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\joseg\\Downloads\\poi-bin
 file.reference.jakarta.xml.bind-api-3.0.1.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.xml.bind-api-3.0.1.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\joseg\\OneDrive - Universidad del Istmo\\ENRUTAMIENTO PASS\\jcalendar-1.4.jar
 file.reference.log4j-api-2.18.0.jar=C:\\Users\\joseg\\Downloads\\jar_files\\log4j-api-2.18.0.jar
+file.reference.log4j-api-2.18.0.jar-1=..\\jar_files\\log4j-api-2.18.0.jar
+file.reference.log4j-api-2.18.0.jar-2=jar_files\\log4j-api-2.18.0.jar
 file.reference.log4j-core-2.18.0.jar=C:\\Users\\joseg\\Downloads\\jar_files\\log4j-core-2.18.0.jar
+file.reference.log4j-core-2.18.0.jar-1=..\\jar_files\\log4j-core-2.18.0.jar
+file.reference.log4j-core-2.18.0.jar-2=jar_files\\log4j-core-2.18.0.jar
 file.reference.pdfbox-2.0.26.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\auxiliary\\pdfbox-2.0.26.jar
 file.reference.poi-5.2.3.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-5.2.3.jar
 file.reference.poi-examples-5.2.3.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-examples-5.2.3.jar
@@ -139,7 +143,11 @@ javac.classpath=\
     ${file.reference.xml-apis-ext-1.3.04.jar}:\
     ${file.reference.xmlgraphics-commons-2.6.jar}:\
     ${file.reference.xmlsec-3.0.0.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.log4j-api-2.18.0.jar-1}:\
+    ${file.reference.log4j-core-2.18.0.jar-1}:\
+    ${file.reference.log4j-api-2.18.0.jar-2}:\
+    ${file.reference.log4j-core-2.18.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -175,7 +183,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProyectoPooDist
-main.class=PaquetePrincipal.FRAMEGESTIONDEPILOTOS
+main.class=PaquetePrincipal.FRAMEGESTIONPILOTOS
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
