--- a/ProyectoPooDist/nbproject/project.properties
+++ b/ProyectoPooDist/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProyectoPooDist
+application.vendor=joseg
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/ProyectoPooDist.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoPooDist
+endorsed.classpath=
 excludes=
 file.reference.batik-anim-1.14.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\auxiliary\\batik-anim-1.14.jar
 file.reference.batik-awt-util-1.14.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\auxiliary\\batik-awt-util-1.14.jar
@@ -67,10 +69,8 @@ file.reference.graphics2d-0.40.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20
 file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.xml.bind-api-3.0.1.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.xml.bind-api-3.0.1.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\joseg\\OneDrive - Universidad del Istmo\\ENRUTAMIENTO PASS\\jcalendar-1.4.jar
-file.reference.log4j-api-2.18.0.jar=C:\\Users\\joseg\\Downloads\\jar_files\\log4j-api-2.18.0.jar
 file.reference.log4j-api-2.18.0.jar-1=..\\jar_files\\log4j-api-2.18.0.jar
 file.reference.log4j-api-2.18.0.jar-2=jar_files\\log4j-api-2.18.0.jar
-file.reference.log4j-core-2.18.0.jar=C:\\Users\\joseg\\Downloads\\jar_files\\log4j-core-2.18.0.jar
 file.reference.log4j-core-2.18.0.jar-1=..\\jar_files\\log4j-core-2.18.0.jar
 file.reference.log4j-core-2.18.0.jar-2=jar_files\\log4j-core-2.18.0.jar
 file.reference.pdfbox-2.0.26.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\auxiliary\\pdfbox-2.0.26.jar
@@ -92,8 +92,6 @@ file.reference.xmlsec-3.0.0.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.log4j-api-2.18.0.jar}:\
-    ${file.reference.log4j-core-2.18.0.jar}:\
     ${file.reference.poi-5.2.3.jar}:\
     ${file.reference.poi-examples-5.2.3.jar}:\
     ${file.reference.poi-excelant-5.2.3.jar}:\
