--- a/ProyectoPooDist/nbproject/project.properties
+++ b/ProyectoPooDist/nbproject/project.properties
@@ -73,7 +73,6 @@ file.reference.fontbox-2.0.26.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-202
 file.reference.graphics2d-0.40.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\auxiliary\\graphics2d-0.40.jar
 file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.xml.bind-api-3.0.1.jar=C:\\Users\\joseg\\Downloads\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.xml.bind-api-3.0.1.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\joseg\\OneDrive - Universidad del Istmo\\ENRUTAMIENTO PASS\\jcalendar-1.4.jar
 file.reference.log4j-api-2.18.0.jar-1=..\\jar_files\\log4j-api-2.18.0.jar
 file.reference.log4j-api-2.18.0.jar-2=jar_files\\log4j-api-2.18.0.jar
 file.reference.log4j-core-2.18.0.jar-1=..\\jar_files\\log4j-core-2.18.0.jar
@@ -132,8 +131,6 @@ file.reference.graphics2d-0.40.jar=poi-bin-5.2.3-20220909 (2)\\poi-bin-5.2.3-202
 file.reference.jakarta.activation-2.0.1.jar=poi-bin-5.2.3-20220909 (2)\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.xml.bind-api-3.0.1.jar=poi-bin-5.2.3-20220909 (2)\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.xml.bind-api-3.0.1.jar
 file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
-file.reference.log4j-api-2.18.0.jar=jar_files\\log4j-api-2.18.0.jar
-file.reference.log4j-core-2.18.0.jar=jar_files\\log4j-core-2.18.0.jar
 file.reference.pdfbox-2.0.26.jar=poi-bin-5.2.3-20220909 (2)\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\auxiliary\\pdfbox-2.0.26.jar
 file.reference.poi-5.2.3.jar=poi-bin-5.2.3-20220909 (2)\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-5.2.3.jar
 file.reference.poi-examples-5.2.3.jar=poi-bin-5.2.3-20220909 (2)\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\poi-examples-5.2.3.jar
@@ -154,9 +151,57 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.log4j-api-2.18.0.jar}:\
-    ${file.reference.log4j-core-2.18.0.jar}:\
->>>>>>> cff36980dbd86c58fb371331cae589e43a036fff
+    ${file.reference.log4j-api-2.18.0.jar-2}:\
+    ${file.reference.log4j-core-2.18.0.jar-2}:\
+    ${file.reference.poi-5.2.3.jar}:\
+    ${file.reference.poi-examples-5.2.3.jar}:\
+    ${file.reference.poi-excelant-5.2.3.jar}:\
+    ${file.reference.poi-javadoc-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-full-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-lite-5.2.3.jar}:\
+    ${file.reference.poi-scratchpad-5.2.3.jar}:\
+    ${file.reference.commons-compress-1.21.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.curvesapi-1.07.jar}:\
+    ${file.reference.jakarta.activation-2.0.1.jar}:\
+    ${file.reference.jakarta.xml.bind-api-3.0.1.jar}:\
+    ${file.reference.slf4j-api-1.7.36.jar}:\
+    ${file.reference.xmlbeans-5.1.1.jar}:\
+    ${file.reference.SparseBitSet-1.2.jar}:\
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.batik-anim-1.14.jar}:\
+    ${file.reference.batik-awt-util-1.14.jar}:\
+    ${file.reference.batik-bridge-1.14.jar}:\
+    ${file.reference.batik-codec-1.14.jar}:\
+    ${file.reference.batik-constants-1.14.jar}:\
+    ${file.reference.batik-css-1.14.jar}:\
+    ${file.reference.batik-dom-1.14.jar}:\
+    ${file.reference.batik-ext-1.14.jar}:\
+    ${file.reference.batik-gvt-1.14.jar}:\
+    ${file.reference.batik-i18n-1.14.jar}:\
+    ${file.reference.batik-parser-1.14.jar}:\
+    ${file.reference.batik-script-1.14.jar}:\
+    ${file.reference.batik-shared-resources-1.14.jar}:\
+    ${file.reference.batik-svg-dom-1.14.jar}:\
+    ${file.reference.batik-svggen-1.14.jar}:\
+    ${file.reference.batik-svgrasterizer-1.14.jar}:\
+    ${file.reference.batik-transcoder-1.14.jar}:\
+    ${file.reference.batik-util-1.14.jar}:\
+    ${file.reference.batik-xml-1.14.jar}:\
+    ${file.reference.bcpkix-jdk15on-1.70.jar}:\
+    ${file.reference.bcprov-jdk15on-1.70.jar}:\
+    ${file.reference.bcutil-jdk15on-1.70.jar}:\
+    ${file.reference.fontbox-2.0.26.jar}:\
+    ${file.reference.graphics2d-0.40.jar}:\
+    ${file.reference.pdfbox-2.0.26.jar}:\
+    ${file.reference.xml-apis-1.4.01.jar}:\
+    ${file.reference.xml-apis-ext-1.3.04.jar}:\
+    ${file.reference.xmlgraphics-commons-2.6.jar}:\
+    ${file.reference.xmlsec-3.0.0.jar}
     ${file.reference.poi-5.2.3.jar}:\
     ${file.reference.poi-examples-5.2.3.jar}:\
     ${file.reference.poi-excelant-5.2.3.jar}:\
@@ -241,7 +286,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProyectoPooDist
-main.class=PaquetePrincipal.FrameInventario
+main.class=PaquetePrincipal.FramePlanillaSemanal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
