--- a/ProyectoPooDist/nbproject/project.properties
+++ b/ProyectoPooDist/nbproject/project.properties
@@ -286,7 +286,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProyectoPooDist
-main.class=PaquetePrincipal.FramePlanillaSemanal
+main.class=PaquetePrincipal.FrameInventario
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
