--- a/ProyectoPooDist/nbproject/project.properties
+++ b/ProyectoPooDist/nbproject/project.properties
@@ -46,12 +46,11 @@ excludes=
 file.reference.commons-compress-1.21.jar=poi-bin-5.2.3-20220909 (2)\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\commons-compress-1.21.jar
 file.reference.commons-logging-1.2.jar=poi-bin-5.2.3-20220909 (2)\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\commons-logging-1.2.jar
 file.reference.curvesapi-1.07.jar=poi-bin-5.2.3-20220909 (2)\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\curvesapi-1.07.jar
-file.reference.ENRUTAMIENTO_PASS-CORREOS_JAVA=C:\\Users\\joseg\\OneDrive - Universidad del Istmo\\ENRUTAMIENTO PASS\\CORREOS JAVA
 file.reference.jakarta.activation-2.0.1.jar=poi-bin-5.2.3-20220909 (2)\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.activation-2.0.1.jar
-file.reference.jakarta.mail-api-2.1.1-20220406.180607-1-javadoc.jar=C:\\Users\\joseg\\OneDrive - Universidad del Istmo\\ENRUTAMIENTO PASS\\CORREOS JAVA\\agregar lo de los correos\\jakarta.mail-api-2.1.1-20220406.180607-1-javadoc.jar
+file.reference.jakarta.mail-api-2.1.1-20220406.180607-1-javadoc.jar=jar_files\\CORREOS JAVA\\agregar lo de los correos\\jakarta.mail-api-2.1.1-20220406.180607-1-javadoc.jar
 file.reference.jakarta.xml.bind-api-3.0.1.jar=poi-bin-5.2.3-20220909 (2)\\poi-bin-5.2.3-20220909\\poi-bin-5.2.3\\ooxml-lib\\jakarta.xml.bind-api-3.0.1.jar
-file.reference.javax.activation.jar=C:\\Users\\joseg\\OneDrive - Universidad del Istmo\\ENRUTAMIENTO PASS\\CORREOS JAVA\\agregar lo de los correos\\javax.activation.jar
-file.reference.javax.mail.jar=C:\\Users\\joseg\\OneDrive - Universidad del Istmo\\ENRUTAMIENTO PASS\\CORREOS JAVA\\agregar lo de los correos\\javax.mail.jar
+file.reference.javax.activation.jar=jar_files\\CORREOS JAVA\\agregar lo de los correos\\javax.activation.jar
+file.reference.javax.mail.jar=jar_files\\CORREOS JAVA\\agregar lo de los correos\\javax.mail.jar
 file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.log4j-api-2.18.0.jar=jar_files\\log4j-api-2.18.0.jar
 file.reference.log4j-api-2.18.0.jar-1=..\\jar_files\\log4j-api-2.18.0.jar
@@ -161,7 +160,6 @@ javac.classpath=\
     ${file.reference.xmlgraphics-commons-2.6.jar}:\
     ${file.reference.xmlsec-3.0.0.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.ENRUTAMIENTO_PASS-CORREOS_JAVA}:\
     ${file.reference.jakarta.mail-api-2.1.1-20220406.180607-1-javadoc.jar}:\
     ${file.reference.javax.activation.jar}:\
     ${file.reference.javax.mail.jar}
